fix enteramt on mobile

--- a/src/heartwalk2020/sass/registration.scss
+++ b/src/heartwalk2020/sass/registration.scss
@@ -252,7 +252,11 @@ div#part_type_fundraising_goal_container #suggested_goal_container {
     width: 200px;
     margin-left: 5px;
 }
-
+@media (max-width:767px) {
+	#part_type_additional_gift_container .enterAmt input[type=text] {
+	    width: 100px;
+	}
+}
 #part_type_instruction_sub_header, .progress-bar-container, .part-type-name-value-separator, .part-type-fee-text {
     display: none;
 }
